# CASEFLOW_AI

./: .gitignore
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: ai_analysis.py  cases.py  document_actions.py  documents.py
backend/app/services/: ai_service.py  text_extractor.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/cases/: page.tsx
frontend/src/app/cases/[id]/: page.tsx
frontend/src/app/cases/[id]/edit/: page.tsx
frontend/src/app/cases/new/: page.tsx
frontend/src/lib/: api.ts  date.ts
frontend/src/types/: case.ts
